Possible white gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html {
+    overflow-x: hidden;
+}
 body {
     font-family: 'Roboto', sans-serif;
     color: #2c2c2c;
@@ -7,6 +10,8 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+
+    overflow-x: hidden;
 }
 
 h2 {
